NeoCompiler/NeoParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5 C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g 2023-05-16 20:16:50

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5")]
[System.CLSCompliant(false)]
public partial class NeoParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "COMMENT", "DECLARATION", "FILE", "FLOAT_VALUE", "FUNCTION_ARGUMENT", "FUNCTION_ARGUMENTS", "FUNCTION_BODY", "FUNCTION_CALL", "FUNCTION_DEF", "FUNCTION_DEFS", "ID", "INT_VALUE", "LITERAL", "PARAM", "PARAMS", "PARENEXP", "PROGRAM", "SCRIPT", "TYPE_FLOAT", "TYPE_INT", "UNARY", "VARIABLE", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'='", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int ASSIGNMENT=4;
	public const int COMMENT=5;
	public const int DECLARATION=6;
	public const int FILE=7;
	public const int FLOAT_VALUE=8;
	public const int FUNCTION_ARGUMENT=9;
	public const int FUNCTION_ARGUMENTS=10;
	public const int FUNCTION_BODY=11;
	public const int FUNCTION_CALL=12;
	public const int FUNCTION_DEF=13;
	public const int FUNCTION_DEFS=14;
	public const int ID=15;
	public const int INT_VALUE=16;
	public const int LITERAL=17;
	public const int PARAM=18;
	public const int PARAMS=19;
	public const int PARENEXP=20;
	public const int PROGRAM=21;
	public const int SCRIPT=22;
	public const int TYPE_FLOAT=23;
	public const int TYPE_INT=24;
	public const int UNARY=25;
	public const int VARIABLE=26;
	public const int WS=27;

	public NeoParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public NeoParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return NeoParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g"; } }


	public AstParserRuleReturnScope<CommonTree, CommonToken> Process() {
		//TreeAdaptor = new CommonTreeAdaptor();
		return file();
	}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_file();
	partial void LeaveRule_file();
	// $ANTLR start "file"
	// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:39:1: file : script -> ^( FILE script ) ;
	[GrammarRule("file")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> file()
	{
		EnterRule_file();
		EnterRule("file", 1);
		TraceIn("file", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> script1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_script=new RewriteRuleSubtreeStream(adaptor,"rule script");
		try { DebugEnterRule(GrammarFileName, "file");
		DebugLocation(39, 1);
		try
		{
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:40:2: ( script -> ^( FILE script ) )
			DebugEnterAlt(1);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:40:4: script
			{
			DebugLocation(40, 4);
			PushFollow(Follow._script_in_file128);
			script1=script();
			PopFollow();

			stream_script.Add(script1.Tree);


			{
			// AST REWRITE
			// elements: script
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 40:11: -> ^( FILE script )
			{
				DebugLocation(40, 14);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:40:14: ^( FILE script )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(40, 16);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FILE, "FILE"), root_1);

				DebugLocation(40, 21);
				adaptor.AddChild(root_1, stream_script.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("file", 1);
			LeaveRule("file", 1);
			LeaveRule_file();
		}
		DebugLocation(41, 1);
		} finally { DebugExitRule(GrammarFileName, "file"); }
		return retval;

	}
	// $ANTLR end "file"

	partial void EnterRule_script();
	partial void LeaveRule_script();
	// $ANTLR start "script"
	// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:1: script : ( functionDefs )? ( program )? -> ^( SCRIPT ( functionDefs )? ( program )? ) ;
	[GrammarRule("script")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> script()
	{
		EnterRule_script();
		EnterRule("script", 2);
		TraceIn("script", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> functionDefs2 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> program3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_functionDefs=new RewriteRuleSubtreeStream(adaptor,"rule functionDefs");
		RewriteRuleSubtreeStream stream_program=new RewriteRuleSubtreeStream(adaptor,"rule program");
		try { DebugEnterRule(GrammarFileName, "script");
		DebugLocation(43, 1);
		try
		{
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:8: ( ( functionDefs )? ( program )? -> ^( SCRIPT ( functionDefs )? ( program )? ) )
			DebugEnterAlt(1);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:10: ( functionDefs )? ( program )?
			{
			DebugLocation(43, 10);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:10: ( functionDefs )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==ID))
			{
				int LA1_2 = input.LA(2);

				if ((LA1_2==28))
				{
					int LA1_3 = input.LA(3);

					if ((LA1_3==ID))
					{
						int LA1_4 = input.LA(4);

						if ((LA1_4==ID))
						{
							alt1 = 1;
						}
					}
					else if ((LA1_3==29))
					{
						int LA1_4 = input.LA(4);

						if ((LA1_4==37))
						{
							alt1 = 1;
						}
					}
				}
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:10: functionDefs
				{
				DebugLocation(43, 10);
				PushFollow(Follow._functionDefs_in_script147);
				functionDefs2=functionDefs();
				PopFollow();

				stream_functionDefs.Add(functionDefs2.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(43, 24);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:24: ( program )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==ID))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:24: program
				{
				DebugLocation(43, 24);
				PushFollow(Follow._program_in_script150);
				program3=program();
				PopFollow();

				stream_program.Add(program3.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }



			{
			// AST REWRITE
			// elements: functionDefs, program
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 43:33: -> ^( SCRIPT ( functionDefs )? ( program )? )
			{
				DebugLocation(43, 36);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:36: ^( SCRIPT ( functionDefs )? ( program )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(43, 38);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(SCRIPT, "SCRIPT"), root_1);

				DebugLocation(43, 45);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:45: ( functionDefs )?
				if (stream_functionDefs.HasNext)
				{
					DebugLocation(43, 45);
					adaptor.AddChild(root_1, stream_functionDefs.NextTree());

				}
				stream_functionDefs.Reset();
				DebugLocation(43, 59);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:43:59: ( program )?
				if (stream_program.HasNext)
				{
					DebugLocation(43, 59);
					adaptor.AddChild(root_1, stream_program.NextTree());

				}
				stream_program.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("script", 2);
			LeaveRule("script", 2);
			LeaveRule_script();
		}
		DebugLocation(44, 1);
		} finally { DebugExitRule(GrammarFileName, "script"); }
		return retval;

	}
	// $ANTLR end "script"

	partial void EnterRule_functionDefs();
	partial void LeaveRule_functionDefs();
	// $ANTLR start "functionDefs"
	// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:46:1: functionDefs : ( functionDef )+ -> ^( FUNCTION_DEFS ( functionDef )+ ) ;
	[GrammarRule("functionDefs")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> functionDefs()
	{
		EnterRule_functionDefs();
		EnterRule("functionDefs", 3);
		TraceIn("functionDefs", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> functionDef4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_functionDef=new RewriteRuleSubtreeStream(adaptor,"rule functionDef");
		try { DebugEnterRule(GrammarFileName, "functionDefs");
		DebugLocation(46, 1);
		try
		{
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:47:2: ( ( functionDef )+ -> ^( FUNCTION_DEFS ( functionDef )+ ) )
			DebugEnterAlt(1);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:47:4: ( functionDef )+
			{
			DebugLocation(47, 4);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:47:4: ( functionDef )+
			int cnt3=0;
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==ID))
				{
					int LA3_2 = input.LA(2);

					if ((LA3_2==28))
					{
						int LA3_3 = input.LA(3);

						if ((LA3_3==ID))
						{
							int LA3_4 = input.LA(4);

							if ((LA3_4==ID))
							{
								alt3 = 1;
							}


						}
						else if ((LA3_3==29))
						{
							int LA3_4 = input.LA(4);

							if ((LA3_4==37))
							{
								alt3 = 1;
							}


						}


					}


				}


				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:47:5: functionDef
					{
					DebugLocation(47, 5);
					PushFollow(Follow._functionDef_in_functionDefs176);
					functionDef4=functionDef();
					PopFollow();

					stream_functionDef.Add(functionDef4.Tree);

					}
					break;

				default:
					if (cnt3 >= 1)
						goto loop3;

					EarlyExitException eee3 = new EarlyExitException( 3, input );
					DebugRecognitionException(eee3);
					throw eee3;
				}
				cnt3++;
			}
			loop3:
				;

			} finally { DebugExitSubRule(3); }



			{
			// AST REWRITE
			// elements: functionDef
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 47:19: -> ^( FUNCTION_DEFS ( functionDef )+ )
			{
				DebugLocation(47, 22);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:47:22: ^( FUNCTION_DEFS ( functionDef )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(47, 24);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FUNCTION_DEFS, "FUNCTION_DEFS"), root_1);

				DebugLocation(47, 38);
				if (!(stream_functionDef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_functionDef.HasNext )
				{
					DebugLocation(47, 38);
					adaptor.AddChild(root_1, stream_functionDef.NextTree());

				}
				stream_functionDef.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("functionDefs", 3);
			LeaveRule("functionDefs", 3);
			LeaveRule_functionDefs();
		}
		DebugLocation(48, 1);
		} finally { DebugExitRule(GrammarFileName, "functionDefs"); }
		return retval;

	}
	// $ANTLR end "functionDefs"

	partial void EnterRule_functionDef();
	partial void LeaveRule_functionDef();
	// $ANTLR start "functionDef"
	// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:1: functionDef : ID ( '(' ( parameters )? ')' '{' ( body )? '}' ) -> ^( FUNCTION_DEF ID ( parameters )? ( body )? ) ;
	[GrammarRule("functionDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> functionDef()
	{
		EnterRule_functionDef();
		EnterRule("functionDef", 4);
		TraceIn("functionDef", 4);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken ID5 = default(CommonToken);
		CommonToken char_literal6 = default(CommonToken);
		CommonToken char_literal8 = default(CommonToken);
		CommonToken char_literal9 = default(CommonToken);
		CommonToken char_literal11 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> parameters7 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> body10 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree ID5_tree = default(CommonTree);
		CommonTree char_literal6_tree = default(CommonTree);
		CommonTree char_literal8_tree = default(CommonTree);
		CommonTree char_literal9_tree = default(CommonTree);
		CommonTree char_literal11_tree = default(CommonTree);
		RewriteRuleITokenStream stream_37=new RewriteRuleITokenStream(adaptor,"token 37");
		RewriteRuleITokenStream stream_38=new RewriteRuleITokenStream(adaptor,"token 38");
		RewriteRuleITokenStream stream_28=new RewriteRuleITokenStream(adaptor,"token 28");
		RewriteRuleITokenStream stream_29=new RewriteRuleITokenStream(adaptor,"token 29");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_body=new RewriteRuleSubtreeStream(adaptor,"rule body");
		RewriteRuleSubtreeStream stream_parameters=new RewriteRuleSubtreeStream(adaptor,"rule parameters");
		try { DebugEnterRule(GrammarFileName, "functionDef");
		DebugLocation(50, 1);
		try
		{
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:12: ( ID ( '(' ( parameters )? ')' '{' ( body )? '}' ) -> ^( FUNCTION_DEF ID ( parameters )? ( body )? ) )
			DebugEnterAlt(1);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:14: ID ( '(' ( parameters )? ')' '{' ( body )? '}' )
			{
			DebugLocation(50, 14);
			ID5=(CommonToken)Match(input,ID,Follow._ID_in_functionDef196);  
			stream_ID.Add(ID5);

			DebugLocation(50, 17);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:17: ( '(' ( parameters )? ')' '{' ( body )? '}' )
			DebugEnterAlt(1);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:18: '(' ( parameters )? ')' '{' ( body )? '}'
			{
			DebugLocation(50, 18);
			char_literal6=(CommonToken)Match(input,28,Follow._28_in_functionDef199);  
			stream_28.Add(char_literal6);

			DebugLocation(50, 22);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:22: ( parameters )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==ID))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:22: parameters
				{
				DebugLocation(50, 22);
				PushFollow(Follow._parameters_in_functionDef201);
				parameters7=parameters();
				PopFollow();

				stream_parameters.Add(parameters7.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(50, 34);
			char_literal8=(CommonToken)Match(input,29,Follow._29_in_functionDef204);  
			stream_29.Add(char_literal8);

			DebugLocation(50, 38);
			char_literal9=(CommonToken)Match(input,37,Follow._37_in_functionDef206);  
			stream_37.Add(char_literal9);

			DebugLocation(50, 42);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:42: ( body )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_1 = input.LA(1);

			if ((LA5_1==ID))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:42: body
				{
				DebugLocation(50, 42);
				PushFollow(Follow._body_in_functionDef208);
				body10=body();
				PopFollow();

				stream_body.Add(body10.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }

			DebugLocation(50, 48);
			char_literal11=(CommonToken)Match(input,38,Follow._38_in_functionDef211);  
			stream_38.Add(char_literal11);


			}



			{
			// AST REWRITE
			// elements: body, ID, parameters
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 50:53: -> ^( FUNCTION_DEF ID ( parameters )? ( body )? )
			{
				DebugLocation(50, 56);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:56: ^( FUNCTION_DEF ID ( parameters )? ( body )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(50, 58);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FUNCTION_DEF, "FUNCTION_DEF"), root_1);

				DebugLocation(50, 71);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(50, 74);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:74: ( parameters )?
				if (stream_parameters.HasNext)
				{
					DebugLocation(50, 74);
					adaptor.AddChild(root_1, stream_parameters.NextTree());

				}
				stream_parameters.Reset();
				DebugLocation(50, 86);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:50:86: ( body )?
				if (stream_body.HasNext)
				{
					DebugLocation(50, 86);
					adaptor.AddChild(root_1, stream_body.NextTree());

				}
				stream_body.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("functionDef", 4);
			LeaveRule("functionDef", 4);
			LeaveRule_functionDef();
		}
		DebugLocation(51, 1);
		} finally { DebugExitRule(GrammarFileName, "functionDef"); }
		return retval;

	}
	// $ANTLR end "functionDef"

	partial void EnterRule_body();
	partial void LeaveRule_body();
	// $ANTLR start "body"
	// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:53:1: body : ( statement )+ -> ^( FUNCTION_BODY ( statement )+ ) ;
	[GrammarRule("body")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> body()
	{
		EnterRule_body();
		EnterRule("body", 5);
		TraceIn("body", 5);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> statement12 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
		try { DebugEnterRule(GrammarFileName, "body");
		DebugLocation(53, 1);
		try
		{
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:53:6: ( ( statement )+ -> ^( FUNCTION_BODY ( statement )+ ) )
			DebugEnterAlt(1);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:53:8: ( statement )+
			{
			DebugLocation(53, 8);
			// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:53:8: ( statement )+
			int cnt6=0;
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if ((LA6_1==ID))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch (alt6)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:53:9: statement
					{
					DebugLocation(53, 9);
					PushFollow(Follow._statement_in_body238);
					statement12=statement();
					PopFollow();

					stream_statement.Add(statement12.Tree);

					}
					break;

				default:
					if (cnt6 >= 1)
						goto loop6;

					EarlyExitException eee6 = new EarlyExitException( 6, input );
					DebugRecognitionException(eee6);
					throw eee6;
				}
				cnt6++;
			}
			loop6:
				;

			} finally { DebugExitSubRule(6); }



			{
			// AST REWRITE
			// elements: statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 53:21: -> ^( FUNCTION_BODY ( statement )+ )
			{
				DebugLocation(53, 24);
				// C:\\Repos\\NeoInterpreter\\NeoCompiler\\Neo.g:53:24: ^( FUNCTION_BODY ( statement )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(53, 26);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FUNCTION_BODY, "FUNCTION_BODY"), root_1);

				DebugLocation(53, 40);
				if (!(stream_statement.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_statement.HasNext )
				{
					DebugLocation(53, 40);
